@@ -1,6 +1,6 @@
 #
 #
-# $Id: indimail-mta.spec.in,v 1.386 2023-07-07 20:50:34+05:30 Cprogrammer Exp mbhangui $
+# $Id: indimail-mta.spec.in,v 1.387 2023-08-29 09:31:39+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -781,7 +781,6 @@ echo ../resolv.conf 1>&3
 
 %attr(0755,root,root)                   %{plugindir}/generic.so
 %attr(0755,root,root)                   %{plugindir}/smtpd-plugin.so
-%attr(0755,root,root)                   %{plugindir}/smtpd-plugin0.so
 %if %tcpserver_plugin != 0
 %attr(0755,root,root)                   %{plugindir}/qmail_smtpd.so
 %endif
